tests/sksl/errors/UnscopedVariableInWhile.glsl
### Compilation failed:

error: 2: variable 'b' must be created in a scope
1 error
